--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,4 @@
 @import "partials/setup.scss";
 @import "partials/variables.scss";
 @import "partials/index.scss";
+@import "partials/scrollbar.scss";
