--- a/styles/style.css
+++ b/styles/style.css
@@ -1,123 +1,155 @@
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
-  display: block; }
+  display: block;
+}
 
 audio, canvas, video {
-  display: inline-block; }
+  display: inline-block;
+}
 
 audio:not([controls]) {
   display: none;
-  height: 0; }
+  height: 0;
+}
 
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+}
 
 a:focus {
-  outline: thin dotted; }
+  outline: thin dotted;
+}
 
 a:active, a:hover {
-  outline: 0; }
+  outline: 0;
+}
 
 h1 {
-  font-size: 2em; }
+  font-size: 2em;
+}
 
 abbr[title] {
-  border-bottom: 1px dotted; }
+  border-bottom: 1px dotted;
+}
 
 b, strong {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 dfn {
-  font-style: italic; }
+  font-style: italic;
+}
 
 mark {
   background: #ff0;
-  color: #000; }
+  color: #000;
+}
 
 code, kbd, pre, samp {
   font-family: monospace, serif;
-  font-size: 1em; }
+  font-size: 1em;
+}
 
 pre {
   white-space: pre-wrap;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 q {
-  quotes: \201C \201D \2018 \2019; }
+  quotes: \201C \201D \2018 \2019;
+}
 
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sup {
-  top: -.5em; }
+  top: -.5em;
+}
 
 sub {
-  bottom: -.25em; }
+  bottom: -.25em;
+}
 
 img {
-  border: 0; }
+  border: 0;
+}
 
 svg:not(:root) {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 fieldset {
   border: 1px solid silver;
   margin: 0 2px;
-  padding: .35em .625em .75em; }
+  padding: .35em .625em .75em;
+}
 
 button, input, select, textarea {
   font-family: inherit;
   font-size: 100%;
-  margin: 0; }
+  margin: 0;
+}
 
 button, input {
-  line-height: normal; }
+  line-height: normal;
+}
 
 button, html input[type=button], input[type=reset], input[type=submit] {
   -webkit-appearance: button;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 button[disabled], input[disabled] {
-  cursor: default; }
+  cursor: default;
+}
 
 input[type=checkbox], input[type=radio] {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0; }
+          box-sizing: border-box;
+  padding: 0;
+}
 
 input[type=search] {
   -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
-  box-sizing: content-box; }
+  box-sizing: content-box;
+}
 
 input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 textarea {
   overflow: auto;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 body, figure {
-  margin: 0; }
+  margin: 0;
+}
 
 legend, button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .clearfix:after {
   visibility: hidden;
@@ -125,12 +157,13 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   font-size: 0;
   content: '';
   clear: both;
-  height: 0; }
+  height: 0;
+}
 
 * {
-  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .visuallyhidden:not(:focus):not(:active) {
   position: absolute;
@@ -141,38 +174,47 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   padding: 0;
   white-space: nowrap;
   -webkit-clip-path: inset(100%);
-  clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0 0 0);
-  overflow: hidden; }
-
-html {
-  font-size: 125%; }
-
-body {
-  font-family: "Lato", sans-serif; }
+  overflow: hidden;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
+
+html {
+  font-size: 125%;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+}
+
+h1, h2 {
+  font-family: "Open Sans", sans-serif;
+}
 
 li {
-  list-style: none; }
+  list-style: none;
+}
 
 a {
   text-decoration: none;
-  color: #e0e2db; }
+  color: #e0e2db;
+}
 
 img {
   display: block;
-  max-width: 100%; }
-
-section {
-  margin-bottom: 2.5%; }
+  max-width: 100%;
+}
 
 .wrapper {
   width: 80%;
   max-width: 1600px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .flexColumn {
   display: -webkit-box;
@@ -180,199 +222,418 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap; }
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
 
 .flexRow {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+}
 
 header {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
-  left: 0;
-  right: 0;
-  background-color: #333333; }
+  background-color: #161616;
+  color: #e0e2db;
+  z-index: 10;
+}
+
+header h1 span {
+  color: #2a4494;
+}
 
 .headerContainer {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 1% 0; }
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1% 0 2.5% 0;
+}
+
+form {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
 
 input[type="radio"] {
-  margin-right: 3%; }
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+  color: #2a4494;
+}
+
+label {
+  -webkit-transition: color 0.15s ease-in;
+  transition: color 0.15s ease-in;
+}
+
+label:hover {
+  color: #2a4494;
+  cursor: pointer;
+}
 
 label[for="searchArtist"] {
-  margin-right: 7%; }
+  margin-right: 3.5%;
+}
 
 .searchFunction {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap; }
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.searchBar.grid {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
 .searchBar {
-  margin-top: 2%; }
-  .searchBar input[type="text"] {
-    background-color: #333333;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent; }
+  margin-top: 2%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.searchBar input[type="text"] {
+  background-color: #333333;
+  border: 1.5px solid transparent;
+  height: 100%;
+  padding-left: 2%;
+  color: #e0e2db;
+  -webkit-transition: border 0.15s ease-in;
+  transition: border 0.15s ease-in;
+  width: 70%;
+}
+
+.searchBar input[type="text"]:focus {
+  border-color: #2a4494;
+}
+
+.searchBar input[type="text"]::-webkit-input-placeholder {
+  color: #e0e2db;
+}
+
+.searchBar input[type="text"]:-ms-input-placeholder {
+  color: #e0e2db;
+}
+
+.searchBar input[type="text"]::-ms-input-placeholder {
+  color: #e0e2db;
+}
+
+.searchBar input[type="text"]::placeholder {
+  color: #e0e2db;
+}
+
+.searchBar input[type="submit"] {
+  padding: 0 10px 1px 10px;
+  border-radius: 5px;
+  border: 2px solid #333333;
+  color: #e0e2db;
+  background: transparent;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in;
+  margin-left: 2%;
+}
+
+.searchBar input[type="submit"]:hover,
+.searchBar input[type="submit"]:focus {
+  background: #2a4494;
+  border-color: transparent;
+  color: #333333;
+}
 
 main {
   background-color: #161616;
-  color: #e0e2db; }
+  color: #e0e2db;
+}
 
 .mainContainer {
-  padding: 150px 0 0.1% 0; }
+  padding-bottom: 0.1%;
+}
 
 .infoContainer,
 .songListContainer {
-  max-height: 20%; }
+  max-height: 20%;
+}
 
 .mainInfoDisplay {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start; }
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
 
 .infoContainer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 40%;
-  flex: 1 0 40%;
+  width: 45%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+}
 
 .songInfo {
-  padding: 3% 0; }
-  .songInfo h3 {
-    text-transform: capitalize; }
+  padding: 2.5% 0;
+}
+
+.songInfo h3 {
+  text-transform: capitalize;
+}
 
 .songListContainer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 60%;
-  flex: 1 1 60%; }
+  width: 55%;
+  margin-bottom: 2.5%;
+}
 
 .songList {
-  max-height: 350px;
-  overflow: scroll; }
-  .songList li:nth-child(2n + 1) {
-    background-color: black; }
-  .songList li {
-    margin-bottom: 1.5%;
-    padding: 1.75% 0 1.75% 3%; }
-  .songList li:hover {
-    background-color: #2a4494;
-    cursor: pointer; }
+  max-height: 325px;
+  overflow-y: auto;
+}
+
+.songList li:nth-child(2n + 1) {
+  background-color: #333333;
+}
+
+.songList li {
+  margin-bottom: 1.5%;
+  padding: 1.75% 0 1.75% 3%;
+}
+
+.songList li p:first-child {
+  font-weight: 600;
+}
+
+.songList li:last-child {
+  margin-bottom: 0;
+}
 
 .trackHeader {
-  margin-bottom: 1.5%; }
+  margin-bottom: 1.5%;
+}
 
 .trackHeading,
 .track {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start; }
-  .trackHeading li,
-  .trackHeading p,
-  .track li,
-  .track p {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 50%;
-    flex: 1 0 50%; }
-  .trackHeading p:hover,
-  .track p:hover {
-    text-decoration: underline;
-    cursor: pointer; }
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.trackHeading li,
+.trackHeading p,
+.track li,
+.track p {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+}
+
+.trackHeading p,
+.track p {
+  -webkit-transition: color 0.25s ease-in;
+  transition: color 0.25s ease-in;
+}
+
+.trackHeading p:last-child,
+.track p:last-child {
+  font-size: 0.75rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.trackHeading p:hover,
+.track p:hover {
+  color: #2a4494;
+  cursor: pointer;
+}
 
 .trackHeading li:nth-of-type(2n + 1) {
-  padding-left: 2%; }
+  padding-left: 2%;
+}
+
+.mainInfoDisplay + section {
+  margin-bottom: 2.25%;
+}
+
+.suggestions {
+  width: 100%;
+}
 
 .suggestions h2 {
-  text-align: center;
-  margin-bottom: 1.5%; }
+  margin-bottom: 1.5%;
+  font-size: 1.25rem;
+}
 
 .suggestions .grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr; }
-  .suggestions .grid li {
-    margin-bottom: 1.5%; }
-  .suggestions .grid li:hover {
-    cursor: pointer;
-    background-color: #2a4494; }
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  font-size: 0.85rem;
+  max-height: 70px;
+}
+
+.suggestions .grid li {
+  margin-bottom: 1.5%;
+  -webkit-transition: color 0.25s ease-in;
+  transition: color 0.25s ease-in;
+}
+
+.suggestions .grid li:hover {
+  cursor: pointer;
+  color: #2a4494;
+}
 
 footer {
   text-align: center;
   padding: .75% 0;
-  background-color: #333333; }
+  background-color: #161616;
+  color: #e0e2db;
+  font-size: 0.75rem;
+}
 
-@media (max-width: 1140px) {
-  .mainInfoDisplay {
+footer span {
+  color: #2a4494;
+}
+
+footer p:last-child {
+  font-size: 0.55rem;
+}
+
+@media (max-width: 1050px) {
+  .infoContainer, .songListContainer {
+    width: 50%;
+  }
+  .trackHeading li:last-child {
+    display: none;
+  }
+  .trackHeading li:nth-of-type(2n+1) {
+    padding-left: 0;
+  }
+  .trackHeading li:first-child {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 47%;
+            flex: 1 0 47%;
+  }
+  .track.flexRow {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-flow: column nowrap;
-    flex-flow: column nowrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
-  .infoContainer,
-  .songListContainer {
-    width: 100%; }
-  .infoContainer {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
-  .songInfo {
-    text-align: center; }
-  .trackHeading,
-  .track {
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    text-align: center; }
-    .trackHeading li,
-    .trackHeading p,
-    .track li,
-    .track p {
-      -webkit-box-flex: 1;
-      -ms-flex: 1 0 25%;
-      flex: 1 0 25%; }
-  .trackHeading li:nth-of-type(1) {
-    padding-left: 5%; }
-  .trackHeading li:nth-of-type(2) {
-    padding-left: 1%; } }
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .track.flexRow p:last-child {
+    font-size: 0.75rem;
+    padding-top: 1%;
+    padding-left: 1%;
+    -webkit-transition: color 0.15s ease-in;
+    transition: color 0.15s ease-in;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  .track.flexRow p:last-child:hover {
+    color: #2a4494;
+  }
+  .songList li {
+    padding-left: 0%;
+  }
+  .suggestions .grid {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
+  html {
+    font-size: 112.5%;
+  }
   .headerContainer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column nowrap;
-    flex-flow: column nowrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    text-align: center; }
-  .mainContainer {
-    padding: 200px 0 0.5% 0; } }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 301px;
+    padding-bottom: 25px;
+  }
+  h1, .searchFunction {
+    width: 301px;
+  }
+  input[type="text"] {
+    max-width: 70%;
+  }
+  input[type="submit"] {
+    max-width: 28%;
+  }
+  .searchBar {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .mainInfoDisplay {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .infoContainer, .songListContainer {
+    width: 100%;
+  }
+  .songImage, .songInfo {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .songInfo {
+    width: 301px;
+  }
+  .songListContainer,
+  .similarArtistsContainer {
+    max-width: 301px;
+  }
+  .songListContainer {
+    margin-bottom: 15px;
+  }
+  .mainInfoDisplay + section {
+    margin-bottom: 25px;
+  }
+  .similarArtistsContainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .suggestions .grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 530px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media (max-width: 391px) {
+  html {
+    font-size: 100%;
+  }
+  .wrapper {
+    width: 98%;
+  }
+}
+/*# sourceMappingURL=style.css.map */
