--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,7 +5,8 @@ $sectionSpace: 2.5%;
 $primaryColor: #161616;
 $secondaryColor: #333333;
 $tertiaryColor: #e0e2db;
-$accentColor: #2a4494;
+// $accentColor: #2a4494;
+$accentColor: darkorange;
 
 // fonts
 
