--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,7 @@ button[disabled], input[disabled] {
   cursor: default; }
 
 input[type=checkbox], input[type=radio] {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0; }
 
@@ -139,6 +140,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
   padding: 0;
   white-space: nowrap;
+  -webkit-clip-path: inset(100%);
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
@@ -148,7 +150,8 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   padding: 0; }
 
 html {
-  font-size: 125%; }
+  font-size: 125%;
+  position: relative; }
 
 body {
   font-family: "Lato", sans-serif; }
@@ -173,13 +176,21 @@ img {
   margin: 0 auto; }
 
 .flexColumn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
   flex-flow: column wrap; }
 
 .flexRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
 
 header {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   background-color: #161616;
@@ -189,7 +200,12 @@ header {
     color: darkorange; }
 
 .headerContainer {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1% 0 2.5% 0; }
 
@@ -204,6 +220,8 @@ input[type="radio"]:checked + label {
   color: darkorange; }
 
 label {
+  -webkit-transition: color 0.15s ease-in;
+  -o-transition: color 0.15s ease-in;
   transition: color 0.15s ease-in; }
 
 label:hover {
@@ -214,13 +232,20 @@ label[for="searchArtist"] {
   margin-right: 3.5%; }
 
 .searchFunction {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column; }
 
 .searchBar.grid {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between; }
 
 .searchBar {
   margin-top: 2%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between; }
   .searchBar input[type="text"] {
     background-color: #333333;
@@ -228,10 +253,18 @@ label[for="searchArtist"] {
     height: 100%;
     padding-left: 2%;
     color: #e0e2db;
+    -webkit-transition: border 0.15s ease-in;
+    -o-transition: border 0.15s ease-in;
     transition: border 0.15s ease-in;
     width: 70%; }
   .searchBar input[type="text"]:focus {
     border-color: darkorange; }
+  .searchBar input[type="text"]::-webkit-input-placeholder {
+    color: #e0e2db; }
+  .searchBar input[type="text"]:-ms-input-placeholder {
+    color: #e0e2db; }
+  .searchBar input[type="text"]::-ms-input-placeholder {
+    color: #e0e2db; }
   .searchBar input[type="text"]::placeholder {
     color: #e0e2db; }
   .searchBar input[type="submit"] {
@@ -240,6 +273,8 @@ label[for="searchArtist"] {
     border: 2px solid #333333;
     color: #e0e2db;
     background: transparent;
+    -webkit-transition: all 0.15s ease-in;
+    -o-transition: all 0.15s ease-in;
     transition: all 0.15s ease-in;
     margin-left: 2%; }
   .searchBar input[type="submit"]:hover,
@@ -260,12 +295,22 @@ main {
   max-height: 20%; }
 
 .mainInfoDisplay {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start; }
 
 .infoContainer {
   width: 45%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column nowrap;
   flex-flow: column nowrap; }
 
 .songInfo {
@@ -295,19 +340,29 @@ main {
 
 .trackHeading,
 .track {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start; }
   .trackHeading li,
   .trackHeading p,
   .track li,
   .track p {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 50%;
     flex: 1 0 50%; }
   .trackHeading p,
   .track p {
+    -webkit-transition: color 0.25s ease-in;
+    -o-transition: color 0.25s ease-in;
     transition: color 0.25s ease-in; }
   .trackHeading p:last-child,
   .track p:last-child {
     font-size: 0.75rem;
+    -ms-flex-item-align: end;
     align-self: flex-end; }
   .trackHeading p:hover,
   .track p:hover {
@@ -326,12 +381,16 @@ main {
     margin-bottom: 1.5%;
     font-size: 1.25rem; }
   .suggestions .grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     font-size: 0.85rem;
     max-height: 70px; }
     .suggestions .grid li {
       margin-bottom: 1.5%;
+      -webkit-transition: color 0.25s ease-in;
+      -o-transition: color 0.25s ease-in;
       transition: color 0.25s ease-in; }
     .suggestions .grid li:hover {
       cursor: pointer;
@@ -356,26 +415,37 @@ footer {
   .trackHeading li:nth-of-type(2n+1) {
     padding-left: 0; }
   .trackHeading li:first-child {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 47%;
     flex: 1 0 47%; }
   .track.flexRow {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column; }
     .track.flexRow p:last-child {
       font-size: 0.75rem;
       padding-top: 1%;
       padding-left: 1%;
+      -webkit-transition: color 0.15s ease-in;
+      -o-transition: color 0.15s ease-in;
       transition: color 0.15s ease-in;
+      -ms-flex-item-align: start;
       align-self: flex-start; }
     .track.flexRow p:last-child:hover {
       color: darkorange; }
   .songList li {
     padding-left: 0%; }
   .suggestions .grid {
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr; } }
 
 @media (max-width: 800px) {
   html {
     font-size: 112.5%; }
   .headerContainer {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 301px;
     padding-bottom: 25px; }
@@ -386,12 +456,18 @@ footer {
   input[type="submit"] {
     max-width: 28%; }
   .searchBar {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start; }
   .mainInfoDisplay {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center; }
   .infoContainer, .songListContainer {
     width: 100%; }
   .songImage, .songInfo {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center; }
   .songInfo {
     width: 301px; }
@@ -403,8 +479,11 @@ footer {
   .mainInfoDisplay + section {
     margin-bottom: 25px; }
   .similarArtistsContainer {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center; }
   .suggestions .grid {
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr; } }
 
 @media (max-width: 530px) {
@@ -427,6 +506,7 @@ footer {
   width: 120%;
   padding-right: 20%;
   overflow-y: scroll;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 .sb-scrollbar-container {
